# pixel2vga

./: CMakeLists.txt  README.md
src/: image.c  image.h  main.c  vga.c  vga.h
